# multi-pihole

./: Cargo.toml  LICENSE  README.md  mpihole-web.ini
src/: main.rs  mpihole-web.ini  pihole.rs  web-server.rs
src/lib/: config.rs  mod.rs  pihole.rs  web_config.rs
src/plib/: config.rs  pihole.rs
static/: index.html
static/js/: main.js
