[package]
name = "pi-ctl"
version = "0.2.0"
authors = ["Jay Deiman <jay@splitstreams.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
log = "0.4.14"
chrono = "0.4.19"
isahc = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
configparser = "2.0.1"
iron = "0.6.1"
router = "0.6.0"

[[bin]]
name = "pi-ctl"
path = "src/main.rs"

[[bin]]
name = "pi-ctl-web"
path = "src/web-server.rs"
